--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,9 +1,12 @@
 .nav-title {
-    font-size: 24px;
-    font-weight: 700;
-    display: inline-block;
-    color: #f2f2f2;
-    padding-left: 10px;
+  display: flexbox;
+  font-size: 24px;
+  font-weight: 700;
+  display: inline-block;
+  color: #f2f2f2;
+  padding-left: 10px;
+ flex-flow: wrap-reverse;
+ opacity: 100%;
 }
 /* 
 .nav {
@@ -13,20 +16,16 @@
 
 .nav-link {
   float: left;
-  color: Blue;
+  color: #0352fc;
   text-align: center;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   padding: 24px 10px;
   text-decoration: none;
   font-size: 15px;
 
-  border:none;
+  border: none;
   cursor: pointer;
-  outline:0;
-}
-
-.nav-link:hover {
-  background-color: #008183;
+  outline: 0;
 }
 
 .nav-right {
