--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -3,16 +3,18 @@
   font-size: 24px;
   font-weight: 700;
   display: inline-block;
-  color: #f2f2f2;
+  color: black;
   padding-left: 10px;
- flex-flow: wrap-reverse;
- opacity: 100%;
+  flex-flow: wrap-reverse;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  text-shadow: blue;
+  font-style: italic;
 }
-/* 
 .nav {
-  overflow: hidden;
-  background-color: #00acb0;
-} */
+  padding-top: 1%;
+  display: flexbox;
+  padding-bottom: 3%;
+}
 
 .nav-link {
   float: left;
