--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -2,6 +2,7 @@ body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   margin: 0px;
   padding-left: 1%;
+  padding-right: 1%
 }
 
 .alert {
