--- a/src/components/WishListAdmin/WishListAdmin.css
+++ b/src/components/WishListAdmin/WishListAdmin.css
@@ -32,5 +32,36 @@ table > td {
 .wishlistItem {
   height: auto;
   max-width: 100%;
-  padding-left: 2%
+  padding-left: 2%;
+}
+
+/* .insertItem {
+  height: 50%;
+} */
+
+.wishListAdminTable {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+.wishListAdminTable td,
+th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+
+.addItemInput {
+  height: 150%;
+  width: 98%;
+  font-size: large;
+  padding-top: 1%;
+  padding-left: 1%;
+  justify-content: center;
+  text-align: center;
 }
