--- a/src/components/WishListAdmin/WishListAdmin.css
+++ b/src/components/WishListAdmin/WishListAdmin.css
@@ -73,3 +73,14 @@ tr:nth-child(even) {
   justify-content: center;
   text-align: center;
 }
+
+.wishHeader {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-style: italic;
+}
+
+.tableTitle {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-style: italic;
+  font-size: x-large;
+}
