--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -2,7 +2,7 @@ body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   margin: 0px;
   padding-left: 1%;
-  padding-right: 1%
+  padding-right: 1%;
 }
 
 .alert {
@@ -11,12 +11,12 @@ body {
 }
 
 form {
-  background-color: #dbd5d5;
-  width: 30%;
-  height: 250px;
-  margin: 20px auto;
-  padding: 25px;
-  border-radius: 2px;
+  /* background-color: #dbd5d5; */
+  width: 40%;
+  height: auto;
+  margin: auto;
+  padding: 0%;
+  border-radius: 17px;
 }
 
 /* input {
@@ -53,5 +53,3 @@ form {
   border-bottom: 1px solid #444;
   cursor: pointer;
 }
-
-
