Added cursor property to make pointer feel like it does something

--- a/src/components/BarrelAdmin/BarrelAdmin.css
+++ b/src/components/BarrelAdmin/BarrelAdmin.css
@@ -56,6 +56,10 @@
 
 #searchDisplay {
   width: 20%;
-
+  text-decoration: underline;
   color: #2483d0;
+  opacity: 80%;
+}
+#searchDisplay:hover {
+  cursor: pointer;
 }
