--- a/src/components/BarrelAdmin/BarrelAdmin.css
+++ b/src/components/BarrelAdmin/BarrelAdmin.css
@@ -63,3 +63,11 @@
 #searchDisplay:hover {
   cursor: pointer;
 }
+
+.searchLabel {
+  text-align: center;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  font-style: italic;
+  font-weight: bolder;
+}
