--- a/src/components/WishListPage/WishListPage.css
+++ b/src/components/WishListPage/WishListPage.css
@@ -1,11 +1,13 @@
 .priorityHeader {
-  text-align: left;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
   font-style: italic;
   font-weight: bolder;
 }
 
+#highPriority {
+  text-align: left;
+}
 #wishListHeader {
   font-weight: bolder;
   padding-bottom: 2%;
@@ -13,4 +15,29 @@
   font-size: xx-large;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+
+.regularItems {
+  display: inline-flexbox;
+  float: right;
+  text-align: right;
+  padding-right: 10%;
+  max-width: 50%;
+    border-radius: 17px;
+  background-color: #2483d0;
+  border: 10px solid black;
+  margin-top: 2%;
+}
+
+.highPriorityItems {
+  background-color: red;
+  max-width: 50%;
+  padding-left: 2%;
+  border: 10px solid black;
+  border-radius: 17px;
+}
+
+.buttons {
+  display: inline-flexbox;
+  text-align: right;
 }
