--- a/src/components/WishListPage/WishListPage.css
+++ b/src/components/WishListPage/WishListPage.css
@@ -7,14 +7,32 @@
 
 #highPriority {
   text-align: left;
+  display: inline-block;
+  /* float: right; */
 }
 #wishListHeader {
   font-weight: bolder;
+  /* padding-top: -10%;
   padding-bottom: 2%;
-  padding-left: 1%;
+  padding-left: 1%; */
   font-size: xx-large;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+
+.sentimentalMessage {
+  display: flexbox;
+  float: right;
+  margin: .08%;
+  flex-direction: column-reverse;
+  box-shadow: black 10px;
+  background-color: red;
+  /* max-width: 40%;
+  padding: 2%;
+  border-radius: 12px;
+  box-shadow: black 10px;
+  margin: 0.8%;
+  /* float: right; */
 }
 
 .regularItems {
@@ -23,18 +41,10 @@
   text-align: right;
   padding-right: 10%;
   max-width: 50%;
-    border-radius: 17px;
+  border-radius: 17px;
   background-color: #2483d0;
   border: 10px solid black;
   margin-top: 2%;
-}
-
-.highPriorityItems {
-  background-color: red;
-  max-width: 50%;
-  padding-left: 2%;
-  border: 10px solid black;
-  border-radius: 17px;
 }
 
 .buttons {
