--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -17,12 +17,12 @@
 }
 
 .nav-link {
-  float: left;
   color: #0352fc;
-  text-align: center;
+  text-align: left;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  padding: 24px 10px;
   text-decoration: none;
+  padding: 1.5%, 2%, 2%, 2%;
+  margin: 1%;
   font-size: 15px;
 
   border: none;
@@ -35,6 +35,20 @@
 }
 
 .srcLogo {
+  width: 100%;
+  height: auto;
+}
+
+.nav-left {
+  display: flexbox;
+  float: left;
+  width: 50%;
+  text-align: left;
+}
+.srcLink {
+}
+
+a {
   max-width: 15%;
   height: auto;
 }
