--- a/src/components/WishListPage/WishListPage.css
+++ b/src/components/WishListPage/WishListPage.css
@@ -25,6 +25,8 @@
   float: right;
   margin: .08%;
   flex-direction: column-reverse;
+    border: 10px solid black;
+
   box-shadow: black 10px;
   background-color: red;
   /* max-width: 40%;
