--- a/src/components/Table/Table.css
+++ b/src/components/Table/Table.css
@@ -1,11 +1,28 @@
-.barrelOverlay {
-  border-collapse: separate;
+#wrapper {
+  width: 100%;
+  text-align: center;
+  justify-self: center;
 }
 
 table {
-  overflow-y: scroll;
-  height: 600px;
+  border: 2px solid black;
+  max-width: 100%;
+}
+
+th,
+td {
+  max-width: 100%;
+  border: 1.5px solid darkgray;
+}
+
+thead > tr {
+  width: auto;
+  position: relative;
   display: block;
-  border: 1px solid block;
-  margin-top: 50px;
+}
+
+tbody {
+  display: block;
+  height: 300px;
+  overflow: auto;
 }
