Cool quality of life change

--- a/src/components/Table/Table.css
+++ b/src/components/Table/Table.css
@@ -13,6 +13,12 @@
   margin: auto;
 }
 
+.barrelTable th {
+  background-color: lightblue;
+  margin: auto;
+  display: inline-flex;
+}
+
 .barrelTable th,
 td {
   max-width: 100%;
