--- a/src/components/Table/Table.css
+++ b/src/components/Table/Table.css
@@ -8,7 +8,7 @@
 .barrelTable {
   padding: 1.2%;
 
-  border: 2px solid black;
+  /* border: 2px solid black; */
   max-width: 100%;
   margin: auto;
 }
