--- a/src/components/BarrelInputForm/BarrelInputForm.css
+++ b/src/components/BarrelInputForm/BarrelInputForm.css
@@ -6,7 +6,7 @@
 }
 .addBarrels {
   /* background-color: antiquewhite; */
-  border: solid blueviolet 3px;
+  border: solid lightblue 3px;
   justify-content: center;
   text-align: center;
   background-color: aliceblue;
