--- a/src/components/BarrelSearch/BarrelSearch.css
+++ b/src/components/BarrelSearch/BarrelSearch.css
@@ -33,3 +33,11 @@
   font-style: italic;
   font-weight: bolder;
 }
+
+.searchBarrels {
+  margin-top: 1.5%;
+  padding: 2%;
+  border: solid lightblue 3px;
+  background-color: aliceblue;
+  border-radius: 22px;
+}
