--- a/src/components/BarrelClient/BarrelClient.css
+++ b/src/components/BarrelClient/BarrelClient.css
@@ -9,13 +9,14 @@
 
 .boldIt {
   background-color: #2483d0;
-  border: 5px solid black;
+  border: 3px solid black;
   border-radius: 17px;
   text-align: center;
   color: white;
+  margin: .05%;
 }
 
-.covid19Response{
+.covid19Response {
   font-style: italic;
   text-align: left;
   max-width: 35%;
