--- a/src/components/BarrelTable/BarrelTable.css
+++ b/src/components/BarrelTable/BarrelTable.css
@@ -21,12 +21,13 @@
 
 .barrelTable th,
 td {
-  max-width: 100%;
+  /* max-width: 100%; */
+  width: 20%;
   border: 1.5px solid darkgray;
 }
 
 .barrelTable thead > tr {
-  width: 100%;
+  /* width: 100%; */
   align-self: start;
   text-align: center;
   justify-self: center;
