--- a/src/components/BarrelTable/BarrelTable.css
+++ b/src/components/BarrelTable/BarrelTable.css
@@ -9,7 +9,7 @@
   padding: 1.2%;
   width: 100%;
   max-width: 100%;
-  /* margin: auto; */
+  margin: auto;
 }
 
 .barrelTable th {
@@ -21,13 +21,12 @@
 
 .barrelTable th,
 td {
-  /* max-width: 100%; */
-  width: 20%;
+  max-width: 100%;
   border: 1.5px solid darkgray;
 }
 
 .barrelTable thead > tr {
-  /* width: 100%; */
+  width: 100%;
   align-self: start;
   text-align: center;
   justify-self: center;
