--- a/src/components/BarrelTable/BarrelTable.css
+++ b/src/components/BarrelTable/BarrelTable.css
@@ -12,11 +12,26 @@
   margin: auto;
 }
 
-.barrelTable th {
+/* .cityTag {
+  margin-right: -4%;
+} */
+.coolTableTr th {
+  text-align: left;
+  width: 11.5%;
+  margin-right: 0.2%;
   justify-self: center;
   background-color: lightblue;
-  display: inline-flex;
-  text-align: center;
+  display: inline-block;
+}
+
+/* .hostTag {
+  margin-left: -10%;
+} */
+
+/* head takes the height it requires,
+and it’s not scaled when table is resized /
+flex: 0 0 auto;
+width: calc(100% - 1.05em);
 }
 
 /* .barrelTable th,
@@ -25,13 +40,13 @@ td {
   border: 1.5px solid darkgray;
 } */
 
-.barrelTable thead > tr {
+/* .barrelTable thead > tr {
   width: 100%;
   align-self: start;
   text-align: center;
   justify-self: center;
   position: relative;
-}
+} */
 
 .barrelTable thead,
 tbody,
@@ -53,3 +68,8 @@ tr {
 .coolTableTr {
   display: inline-block;
 }
+
+/* table thead {
+  flex: 0 0 auto;
+  width: calc(100% - 1.05em);
+} */
