--- a/src/components/WishListPage/WishListPage.css
+++ b/src/components/WishListPage/WishListPage.css
@@ -16,11 +16,12 @@
 }
 
 .highPriorityItems {
-  background-color: red;
+  /* background-color: red; */
   max-width: 50%;
-  border: 10px solid black;
+  /* border: 10px solid black; */
   margin: 0.08%;
   border-radius: 17px;
+  color:red;
 
   box-shadow: black 10px;
 
@@ -55,8 +56,10 @@
   max-width: 50%;
   border-radius: 17px;
   background-color: #2483d0;
-  border: 10px solid black;
+  /* border: 10px solid black; */
   margin-top: 2%;
+  color:white;
+  shape-outside: circle(50%); /* content will flow around the circle*/
 }
 
 .buttons {
