--- a/src/components/BarrelTable/BarrelTable.css
+++ b/src/components/BarrelTable/BarrelTable.css
@@ -1,41 +1,12 @@
-.table-container {
-  height: 40em;
-  margin-top: 11%;
-}
-.barrelTable {
-}
-table {
-  display: flex;
-  flex-flow: column;
-  height: 100%;
-  width: 100%;
-}
-table thead {
-  /* head takes the height it requires, 
-    and it's not scaled when table is resized */
-  flex: 0 0 auto;
-  width: calc(100% - 0.9em);
-}
-table tbody {
-  /* body takes all the remaining available space */
-  flex: 1 1 auto;
+.table-container tbody {
   display: block;
-  overflow-y: scroll;
+  height: 500px;
+  overflow: auto;
 }
-table tbody tr {
-  width: 100%;
-}
-table thead,
-table tbody tr {
+
+.table-container thead,
+tbody tr {
   display: table;
+  width: 100%;
   table-layout: fixed;
-}
-
-table td {
-  font-size: calc(0.6vmin + 0.6vmax);
-}
-
-table th,
-i {
-  font-size: calc(0.6vmin + 0.6vmax);
 }
