--- a/src/components/WishListAdmin/WishListAdmin.css
+++ b/src/components/WishListAdmin/WishListAdmin.css
@@ -1,24 +1,37 @@
+.adminView table {
+  display: table;
+  width: 100%;
+  border-collapse: separate;
+  margin: auto;
+}
+.adminView th,
+td {
+  border-bottom: 1px solid #ddd;
+  padding: 6px;
+  border: 1px solid #ccc;
+  text-align: left;
+}
 /* table > td {
   display: inline;
 } */
-.colorMe {
+/* .colorMe {
   background-color: red;
-}
+} */
 
-.adminView {
+/* .adminView {
   margin-top: 1.5%;
   max-width: 100%;
-}
+} */
 
-.editInput {
+/* .editInput {
   width: 98%;
   padding-left: 2%;
 }
-/* .editButtons {
+.editButtons {
   max-width: 100%;
   display: inline-flex;
-} */
-
+}
+*/
 /* .buttonRow {
   width: 2%;
   display: flexbox;
@@ -30,19 +43,20 @@
   margin: auto;
   text-align: center;
 } */
-/* 
-.checkBox {
+*/
+
+/* .checkBox {
   display: flexbox;
   flex-direction: row;
   margin: auto;
   width: 2%;
 } */
- 
-.wishlistItem {
+
+/* .wishlistItem {
   height: auto;
   max-width: 100%;
   padding-left: 2%;
-}
+} */
 
 /* .insertItem {
   height: 50%;
@@ -50,26 +64,30 @@
 /* .adminView thead,
 tbody,
 tr {
+  margin: auto;
   display: table;
   width: 100%;
 } */
-.wishListAdminTable {
+.adminView {
   font-family: arial, sans-serif;
   border-collapse: collapse;
   width: 100%;
 }
 
-.wishListAdminTable td,
-th, td {
+.adminView td,
+th,
+td {
+  text-align: left;
+  padding-left: 2%;
   border: 1px solid #dddddd;
-  text-align: center;
+  /* text-align: center; */
 }
 
 tr:nth-child(even) {
   background-color: #dddddd;
 }
 
-.addItemInput {
+/* .addItemInput {
   height: 150%;
   width: 98%;
   font-size: large;
@@ -77,7 +95,7 @@ tr:nth-child(even) {
   padding-left: 1%;
   justify-content: center;
   text-align: center;
-}
+} */
 
 .wishHeader {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
@@ -89,4 +107,3 @@ tr:nth-child(even) {
   font-style: italic;
   font-size: x-large;
 }
-
