updated wishlist page css

--- a/src/components/WishListPage/WishListPage.css
+++ b/src/components/WishListPage/WishListPage.css
@@ -5,6 +5,7 @@
   font-style: italic;
   font-weight: bolder;
   text-align: left;
+  
 }
 
 #highPriority {
@@ -16,18 +17,19 @@
 }
 
 .highPriorityItems {
-  /* background-color: red; */
+  background-color: red; 
   max-width: 50%;
   /* border: 10px solid black; */
   margin: 0.08%;
   border-radius: 17px;
-  color:red;
+  color:white;
 
   box-shadow: black 10px;
 
   margin-top: 2%;
 }
 #wishListHeader {
+  text-align: center;
   font-weight: bolder;
   /* padding-top: -10%;
   padding-bottom: 2%;
@@ -38,8 +40,9 @@
 }
 
 .sentimentalMessage {
-  display: inline-flex;
-  float: right;
+  text-align: center;
+  /* display: center; */
+  float: center;
   margin: 0.08%;
   /* border: 10px solid black; */
   max-width: 50%;
@@ -64,6 +67,17 @@
 
 .buttons {
   display: inline-box;
-  text-align: right;
+  text-align: center;
   flex-wrap: wrap-reverse;
 }
+
+a{
+  color:white;
+  display: inline-box;
+  text-align: center;
+  flex-wrap: wrap-reverse;
+}
+img{
+  border-radius: 50%;
+  /* shape-outside: circle(50%); /* content will flow around the circle*/
+} 
