--- a/src/components/WishListAdmin/WishListAdmin.css
+++ b/src/components/WishListAdmin/WishListAdmin.css
@@ -1,109 +1,32 @@
-.adminView table {
-  display: table;
-  width: 100%;
-  border-collapse: separate;
-  margin: auto;
+.table-container2 tbody {
+  display: block;
+  /* height: 500px;
+  overflow: auto; */
 }
-.adminView th,
-td {
-  border-bottom: 1px solid #ddd;
-  padding: 6px;
-  border: 1px solid #ccc;
-  text-align: left;
-}
-/* table > td {
-  display: inline;
-} */
-/* .colorMe {
-  background-color: red;
-} */
 
-/* .adminView {
+.table-container2 table {
   margin-top: 1.5%;
-  max-width: 100%;
-} */
-
-/* .editInput {
-  width: 98%;
-  padding-left: 2%;
 }
-.editButtons {
-  max-width: 100%;
-  display: inline-flex;
-}
-*/
-/* .buttonRow {
-  width: 2%;
-  display: flexbox;
-  text-align: center;
-} */
-/* .buttonRow > Button {
-  display: flexbox;
-  width: 2%;
-  margin: auto;
-  text-align: center;
-} */
-*/
 
-/* .checkBox {
-  display: flexbox;
-  flex-direction: row;
-  margin: auto;
-  width: 2%;
-} */
-
-/* .wishlistItem {
-  height: auto;
-  max-width: 100%;
-  padding-left: 2%;
-} */
-
-/* .insertItem {
-  height: 50%;
-} */
-/* .adminView thead,
-tbody,
-tr {
-  margin: auto;
+.table-container2 thead,
+tbody tr {
   display: table;
   width: 100%;
-} */
-.adminView {
-  font-family: arial, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
+  table-layout: auto;
 }
 
-.adminView td,
-th,
-td {
-  text-align: left;
-  padding-left: 2%;
-  border: 1px solid #dddddd;
-  /* text-align: center; */
+.table-container2 .itemDescription {
+  width: 85%;
 }
 
-tr:nth-child(even) {
-  background-color: #dddddd;
-}
-
-/* .addItemInput {
-  height: 150%;
-  width: 98%;
-  font-size: large;
-  padding-top: 1%;
-  padding-left: 1%;
-  justify-content: center;
-  text-align: center;
+/* .table-container2 input {
+  width: calc(85em;
 } */
 
-.wishHeader {
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  font-style: italic;
+.MuiInput-root {
+  width: 80%;
 }
 
 .tableTitle {
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  font-style: italic;
-  font-size: x-large;
+  width: 85%;
 }
