Updated map search

--- a/src/components/BarrelInputForm/BarrelInputForm.css
+++ b/src/components/BarrelInputForm/BarrelInputForm.css
@@ -1,6 +1,7 @@
 #addDonationH3 {
-  margin-top: -5%;
-  text-align: center;
+  margin-top: -2%;
+  text-align: left;
+  color: lightblue;
 }
 .addBarrelInput {
   margin: 0.5%;
