--- a/src/components/BarrelClient/BarrelClient.css
+++ b/src/components/BarrelClient/BarrelClient.css
@@ -23,8 +23,16 @@
   max-width: 80%;
 }
 
-.color{
+.privateBarrels{
+  display: flexbox;
   background-color: teal;
+  border: 3px solid black;
+  border-radius: 17px;
+  margin: auto;
+  text-align: center;
+  color: white;
+  margin: 0.05%;
+  max-width: 80%;
 }
 
 .covid19Response {
