--- a/src/components/BarrelClient/BarrelClient.css
+++ b/src/components/BarrelClient/BarrelClient.css
@@ -6,11 +6,22 @@
 
 .locationLists li {
   margin: auto;
-  margin-top: .2%;
+  margin-top: 0.2%;
   list-style: none;
   padding: 0.8%;
 }
 
+.privateBarrels {
+  background-color: red;
+  display: flexbox;
+  border: 3px solid black;
+  border-radius: 17px;
+  margin: auto;
+  text-align: center;
+  color: white;
+  margin: 0.05%;
+  max-width: 80%;
+}
 .boldIt {
   display: flexbox;
   background-color: #2483d0;
