--- a/src/components/BarrelClient/BarrelClient.css
+++ b/src/components/BarrelClient/BarrelClient.css
@@ -1,6 +1,3 @@
-/* .locationLists {
-}
-
 .overlyingList {
   height: 600px;
   overflow-y: auto;
@@ -14,7 +11,9 @@
 }
 
 .boldIt {
-  display: flexbox;
+  display: flex;
+  flex-direction: row;
+
   background-color: #2483d0;
   border: 3px solid black;
   border-radius: 17px;
@@ -26,7 +25,8 @@
 }
 
 .privateBarrels {
-  display: flexbox;
+  display: flex;
+  flex-direction: row;
   background-color: teal;
   border: 3px solid black;
   border-radius: 17px;
@@ -53,4 +53,4 @@
 
 .InsetMap {
   object-fit: contain;
-} */
+}
