--- a/src/components/BarrelCard/BarrelCard.css
+++ b/src/components/BarrelCard/BarrelCard.css
@@ -5,3 +5,13 @@
 /* .ui.card {
   background-color: red;
 } */
+
+.ui.equal.width.grid {
+  margin: 2%;
+  height: 500px;
+  overflow: scroll;
+}
+
+.column {
+  padding: 1%;
+}
