Wrapping up wishlist styling page

--- a/src/components/BarrelClient/BarrelClient.css
+++ b/src/components/BarrelClient/BarrelClient.css
@@ -62,3 +62,11 @@
 .InsetMap {
   object-fit: contain;
 }
+
+.emailAdd {
+  text-decoration: underline;
+}
+
+.emailAdd::hover {
+  background-color: lightblue;
+}
