--- a/src/components/WishListPage/WishListPage.css
+++ b/src/components/WishListPage/WishListPage.css
@@ -52,7 +52,7 @@
   background-color: #2483d0;
   padding: 1.7%;
   /* margin-top: .1% */
-  margin-bottom: .5%;
+  margin-bottom: 0.5%;
 }
 
 .buttons {
@@ -63,4 +63,16 @@
 
 .happy-image {
   border-radius: 50%;
+}
+
+.amazonButton {
+  text-decoration: none;
+}
+.amazonButton::hover {
+  color: black;
+  text-decoration: none;
+}
+.amazonButton:link,
+.amazonButton:visited {
+  color: white;
 }
