--- a/src/components/WishListPage/WishListPage.css
+++ b/src/components/WishListPage/WishListPage.css
@@ -20,7 +20,8 @@
   margin-top: 1%;
 }
 .highPriorityItems {
-  background-color: red;
+  background-color: #2483d0;
+
   margin: auto;
   width: 80%;
   border-radius: 17px;
@@ -32,24 +33,28 @@
 
 .sentimentalMessage {
   text-align: center;
+
   /* display: center; */
-  float: center;
-  margin: 0.08%;
+  /* float: center; */
+  margin: auto;
+  margin-top: 1%;
+  margin-bottom: 1%;
+  /* margin: 0.08%; */
   /* border: 10px solid black; */
-  max-width: 50%;
+  /* max-width: 50%; */
   /* box-shadow: black 10px; */
-  padding: 2%;
+  /* padding: 2%; */
   font-size: medium;
   font-style: italic;
 }
 
 .regularItems {
+  background-color: slategray;
   margin: auto;
   width: 80%;
   border-radius: 17px;
   color: white;
   box-shadow: black 10px;
-  background-color: #2483d0;
   padding: 1.7%;
   /* margin-top: .1% */
   margin-bottom: 0.5%;
@@ -59,15 +64,14 @@
   display: inline-box;
   text-align: center;
   flex-wrap: wrap-reverse;
-  color:white
+  color: white;
 }
-.amazon{
+.amazon {
   display: inline-box;
   text-align: center;
   flex-wrap: wrap-reverse;
-  color:white
+  color: white;
 }
-
 
 .happy-image {
   border-radius: 50%;
