minor touches for presentation

--- a/src/components/WishListPage/WishListPage.css
+++ b/src/components/WishListPage/WishListPage.css
@@ -39,6 +39,7 @@
   margin: auto;
   margin-top: 1%;
   margin-bottom: 1%;
+  width: 80%;
   /* margin: 0.08%; */
   /* border: 10px solid black; */
   /* max-width: 50%; */
