Updated readme from Warren

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -10,6 +10,10 @@ body {
   padding-right: 1%;
 }
 
+.mainApp {
+  padding-bottom: 1%;
+}
+
 .alert {
   background-color: #ff4545;
   margin: 50px;
