--- a/src/components/WishlistGallery/Gallery.css
+++ b/src/components/WishlistGallery/Gallery.css
@@ -1,29 +1,15 @@
-/* .image-gallery-image {
-  height: 100%;
-  width: auto;
-  height: 600px;
-  padding: -2%;
-  border: 1px;
-  border-radius: 22px;
+.root {
+  display: 'flex';
+  flex-wrap: 'wrap';
+  justify-content: 'space-around';
+  overflow: 'hidden';
+}
+.gridList {
+  flex-wrap: 'nowrap';  
+  transform: 'translateZ(0)';
 }
 
-
-
-
-
-.image-gallery-svg {
-  opacity: 100%;
-} */
-
-.image-gallery {
-  display: flexbox;
-  margin-left: 8%;
-  object-fit: contain;
-  /* height: 600px; */
-  flex: content;
-  margin-bottom: -.1%
-}
-
-.image-gallery-image {
-  height: 400px;
+.titleBar {
+  background:
+    'linear-gradient(to top, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.3) 70%, rgba(0,0,0,0) 100%)';
 }
