--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -4,7 +4,7 @@
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   text-decoration: none;
   padding: 1.5%, 2%, 2%, 2%;
-  margin: 1%;
+  margin: 3%;
   font-size: 16px;
   border: none;
   cursor: pointer;
@@ -12,14 +12,24 @@
 }
 
 .nav-right {
-  float: right;
-  padding: 10%;
-  width: 55%;
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+  width: 80%;
+  height: 100%;
+  margin-left: 20px;
+}
+
+.nav-right a {
+  display: block;
 }
 
 .srcLogo {
-  width: 80%;
-  height: auto;
+  box-sizing: border-box;
+  height: 90px;
+  width: auto;
+  display: inline-block;
+  margin: 15px 0px;
 }
 
 .nav-left {
@@ -28,9 +38,11 @@
   width: 50%;
   text-align: left;
 }
+
 .srcLink {
+  margin: 15px;
   max-width: 15%;
-  height: auto;
+  height: 100px;
 }
 
 
