--- a/src/components/BarrelClient/BarrelClient.css
+++ b/src/components/BarrelClient/BarrelClient.css
@@ -42,6 +42,25 @@
   max-width: 100%;
 }
 
+.barrel-locations-header {
+  margin-top: 40px;
+  margin-bottom: 20px;
+}
+
+.barrel-location-header p {
+  text-align: center;
+}
+
+.location-header {
+  text-align: center;
+  font-size: 2em;
+}
+
+.pin-info {
+  font-size: 1.2em;
+  text-align: center;
+}
+
 .set-appointment-text {
   max-width: 65%;
   text-align: center;
