changed maps to render specific location when clicked after a zipcode search. light styling and layout changes

--- a/src/components/ZipcodeFilter/ZipcodeFilter.css
+++ b/src/components/ZipcodeFilter/ZipcodeFilter.css
@@ -33,6 +33,9 @@
   }
   
   .filtered-list-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     line-height: 1.25;
     list-style-type: none;
     margin-bottom: 55px;
