--- a/src/components/BarrelClient/BarrelClient.css
+++ b/src/components/BarrelClient/BarrelClient.css
@@ -101,11 +101,12 @@
 
 .barrel-header h3 {
   max-width: 80%;
+  font-size: 1.5rem;
 }
 
 .barrel-header h1 {
   text-align: center;
-  font-size: 2.5em;
+  font-size: 2.75em;
 }
 
 .barrel-header p {
