--- a/src/components/ZipcodeFilter/ZipcodeFilter.css
+++ b/src/components/ZipcodeFilter/ZipcodeFilter.css
@@ -14,7 +14,7 @@
     display: inline-block;
     font-size: 1.38571429rem;
     margin: 20px 0px;
-    font-size: 1.5em;
+    font-size: 1.8em;
     font-weight: 500;
     font-family: Helvetica, sans-serif;
   }
@@ -50,8 +50,20 @@
   }
   
   .results-header {
-    font-size: 1.5rem;
-    text-decoration: underline;
-    font-weight: normal;
+    font-size: 2.35rem;
+    font-weight: bold;
     margin-bottom: 40px;
+  }
+
+  .location-street {
+    font-size: 0.75em;
+  }
+
+  .location-map-link {
+    font-size: 0.80em;
+  }
+
+  .location-host {
+    font-size: 0.90em;
+    font-weight: bold;
   }
