--- a/src/components/WishListPage/WishListPage.css
+++ b/src/components/WishListPage/WishListPage.css
@@ -25,3 +25,24 @@ ul {
 .logo {  
   text-align: center;
 }
+
+.app-button {
+  background-color: rgb(54, 108, 217) !important;
+  color: rgb(255, 255, 255) !important;
+  width: 150px !important;
+}
+
+@media only screen and (max-width: 600px) {
+  .app-link {  
+    background: none!important;
+    border: none;
+    padding: 0!important;  
+    font-family: arial, sans-serif;
+    /*input has OS specific font-family*/
+    color: #3f51b5 !important;
+    text-decoration: underline !important;
+    cursor: pointer;
+    width: auto !important;
+  }
+}
+
